# engine

./: .gitignore  GA Engine.bat  GA Engine.command  Makefile  README.md  SETUP.md  START-ENGINE.bat  START-ENGINE.command  STOP-ENGINE.bat  STOP-ENGINE.command  UPDATE-ENGINE.bat  UPDATE-ENGINE.command
backend/: python-backend.spec  requirements.txt  run.py  start.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: models.py
backend/app/routers/: backtest_router.py  filter_router.py  import_router.py  montecarlo_router.py
backend/app/schemas/: schemas.py
backend/app/services/: backtest_service.py  filter_service.py  ga_import_service.py  montecarlo_service.py  ohlcv_service.py
backend/app/strategies/: sample_rsi_atr.py
backend/app/utils/: numba_kernels.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: backtestApi.ts  client.ts  filterApi.ts  importApi.ts  montecarloApi.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/pages/: BacktestPage.tsx  ExplorerPage.tsx  FilterPage.tsx  ImportPage.tsx  MonteCarloPage.tsx
frontend/src/store/: backtestStore.ts  explorerStore.ts  (+3 more)
launcher/: README.md  launch-engine.bat  launch-engine.sh  launch-local.bat  launch-local.sh  setup-ssh-key.bat  setup-ssh-key.sh
scripts/: build_backend.sh  dev.sh  setup.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+14 files in other folders)
