[package]
name = "ga-parameter-explorer"
version = "0.1.0"
description = "GA Parameter Explorer — Quant Trading Research Platform"
authors = ["GA Explorer"]
edition = "2021"

[lib]
name = "ga_parameter_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
